Only keep 1 sync db open at a time during sync